--- a/style.css
+++ b/style.css
@@ -1,10 +1,42 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Comfortaa:wght@300;400;500;600;700&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;1,600&family=Merriweather+Sans:wght@300;400;500;600;800&display=swap');
+
+:root {
+    --font-family1: "Gabarito", sans-serif;
+    --font-family2: "Heebo", sans-serif;
+    --font-family3: "Libre Baskerville", serif;
+    --font-family4: "Quicksand", sans-serif;
+    --font-family5: "Raleway", sans-serif;
+    --background-color1: rgba(0, 0, 0, 0.952);
+    --bgcolor1: #ffffff;
+    --color2: rgb(4, 4, 8);
+  }
+  
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Comfortaa', sans-serif;
 }
 
 html, body {
     width: 100%;
     height: 100%;
+    
+}
+.main{
+    width: 100%;
+    background-color: var(--bgcolor1);
+
+}
+.home{
+    width: 100%;
+    min-height: 100vh;
+}
+.nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 30px 50px;
 }
