--- a/style.css
+++ b/style.css
@@ -1,42 +1,80 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Comfortaa:wght@300;400;500;600;700&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;1,600&family=Merriweather+Sans:wght@300;400;500;600;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500;600;700;800&family=Comfortaa:wght@300;400;500;600;700&family=Exo+2:ital,wght@0,100;0,200;0,300;0,400;0,500;0,800;1,600&family=Merriweather+Sans:wght@300;400;500;600;800&display=swap");
 
 :root {
-    --font-family1: "Gabarito", sans-serif;
-    --font-family2: "Heebo", sans-serif;
-    --font-family3: "Libre Baskerville", serif;
-    --font-family4: "Quicksand", sans-serif;
-    --font-family5: "Raleway", sans-serif;
-    --background-color1: rgba(0, 0, 0, 0.952);
-    --bgcolor1: #ffffff;
-    --color2: rgb(4, 4, 8);
-  }
-  
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Comfortaa', sans-serif;
+  --font-family1: "Abhaya Libre", serif;
+  --font-family2: "Comfortaa", sans-serif;
+  --font-family3: "Exo 2", sans-serif;
+  --font-family4: "Merriweather Sans", sans-serif;
+  --background-color1: rgba(0, 0, 0, 0.952);
+  --bgcolor1: #ffffff;
+  --color2: rgb(4, 4, 8);
 }
 
-html, body {
-    width: 100%;
-    height: 100%;
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--font-family2);
 }
-.main{
-    width: 100%;
-    background-color: var(--bgcolor1);
 
+html,
+body {
+  width: 100%;
+  height: 100%;
 }
-.home{
-    width: 100%;
-    min-height: 100vh;
+.main {
+  width: 100%;
+  background-color: var(--bgcolor1);
 }
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 30px 50px;
+.home {
+  width: 100%;
+  min-height: 100vh;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 30px 50px;
+}
+.nav .right {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.nav a {
+  text-decoration: none;
+  font-weight: 400;
+  color: var(--color2);
+  font-size: 1vw;
+  letter-spacing: -1px;
+}
+.nav i {
+  margin-left: 3px;
+  font-size: 20px;
+}
+.home .homemain {
+  width: 100%;
+  padding: 15vw 5vw;
+}
+.home h1 {
+  font-weight: 400;
+  font-size: 1.5vw;
+}
+.headings {
+  display: flex;
+  gap: 40px;
+}
+.homemain .headings h1 {
+  font-size: 8.5vw;
+  font-weight: 900;
+  color: transparent;
+  -webkit-text-stroke: 1px #000;
+  font-family: var(--font-family1);
+}
+.homelast p{
+  font-family: var(--font-family2);
+  font-size: 1.3vw;
+  font-weight: 900;
+    letter-spacing: -.01vw;
 }
